Fix internal UI highlighting and misc fixes
This commit is a little bit too big.

It fixes a bug with the internal UI that was breaking the highlighting
feature (indicates status of articles and when an AJAX request has been
made).

It also does some reformatting in the internal listings UI. This should
make it a bit easier on anyone writing buffer updates in the listings
UI. I was able to reapply some stimulus I wrote previously for this,
super easy!

There are also a couple of CSS classes I renamed to match Bootstrap's
naming conventions.

--- a/app/assets/stylesheets/internal/layout.scss
+++ b/app/assets/stylesheets/internal/layout.scss
@@ -16,25 +16,27 @@
   }
 }
 
-.grid-item {
-  word-wrap: break-word;
+.buffer-cell {
+    /* Max-width derived from width of a Bootstrap container */
+    max-width: 1140px;
+    word-wrap: break-word;
 }
 
-.featured-bg {
+.bg-featured {
   background: #bbffd2;
 }
 
-.approved-bg {
+.bg-approved {
   background: #92e8ae;
   border: 12px solid #ff9900;
 }
 
-.highlighted-bg {
+.bg-highlighted {
   background: #2effa8 !important;
   border: 20px solid black;
 }
 
-.highlighted-border {
+.border-highlighted {
   border: 20px solid black;
 }
 
